--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "animejs": "^3.2.1",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "imagesloaded": "^4.1.4",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@hydrant/eslint-config": "^2.1.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -29,12 +32,15 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@hydrant/eslint-config/vue"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "max-len": "off"
+    }
   },
   "browserslist": [
     "> 1%",
